I believe I have done all but ad the @media stuff and accessability stuff. resized all the pics

--- a/events.html
+++ b/events.html
@@ -3,8 +3,8 @@
    <head>
      <title>EveSunflower Floral</title>
      <link href="./resources/css/index.css" type='text/css' rel="stylesheet">
-     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-     <link rel="icon" href="/favicon.ico" type="image/x-icon">
+     <link rel="shortcut icon" href="./resources/images/favicon.ico" type="image/x-icon">
+     <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
    </head>
     <body>
       <div class="container_12 clearfix">
@@ -21,10 +21,13 @@
             </ul>
           </div>
         </div>
+        <div id="feature" class="grid_12">
+          <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
+        </div>
         <br />
         <div id="headingbox">
           <div id="desc">
-            <h1 id="corp">Events - Corporate Events</h1>
+            <h1 id="corp">Corporate Events</h1>
             <h3>Below is a collection of different pieces I have created for various corporate events</h3>
           </div>
         </div>
@@ -74,11 +77,25 @@
           <div class="article grid_4">
             <img src="./resources/images/E/E14.jpeg" alt="Arch14" width="400">
           </div>  
+        </div>
+        <div id="row5">
+          <div class="article grid_4">
+            <img src="./resources/images/E/E5.jpg" alt="Event5" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/E/E16.jpg" alt="Event16" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="" alt="" width="400">
+          </div>  
         </div>  
+        <div id="feature" class="grid_12">
+          <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
+        </div> 
         <br />
         <div id="headingbox">
           <div id="desc">
-            <h1 id="brand">Events - Branding and Shows</h1>
+            <h1 id="brand">Branding and Shows</h1>
             <h3>Below is a collection of some of my branding work and show peices I have created </h3>
           </div>
         </div>
@@ -98,20 +115,23 @@
         </div>
         <div id="row2"> 
           <div class="article grid_4">
-            <img src="./resources/images/E/Show1.jpeg" alt="Show1" width="400">
+            <img src="./resources/images/E/E15.jpg" alt="Event15" width="400">
           </div>
           <div class="article grid_4">
-            <img src="./resources/images/E/Show2.jpeg" alt="Show2" width="400">
+            <img src="./resources/images/E/E5.jpg" alt="" width="400">
          </div>
          <div class="article grid_4">
             <img src="./resources/images/E/BR2.jpeg" alt="Brand2" width="400">
          </div>  
-       </div>  
+       </div> 
+       <div id="feature" class="grid_12">
+        <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
+      </div> 
       <br />
         <div id="headingbox">
           <div id="desc">
-            <h1 id="movie">Events - TV and Movie</h1>
-            <h3>Below is a collection of the different peices I have created for different TV and Movie productions</h3>
+            <h1 id="movie">TV and Movie</h1>
+            <h3>Below WILL be a collection of the different peices I have created for different TV and Movie productions after they release.</h3>
           </div>
         </div>
         <br />
@@ -119,43 +139,43 @@
         <br />
         <div id="row1">
           <div class="article grid_4">
-            <img src="./resources/images/E/M1.jpeg" alt="Movie1" width="400">
+            <img src="" alt="Movie1" width="400">
           </div>
           <div class="article grid_4">
-            <img id="i2" src="./resources/images/E/M2.jpeg" alt="Movie2" width="400">
+            <img src="" alt="Movie2" width="400">
           </div>
           <div class="article grid_4">
-            <img id="i3" src="./resources/images/E/M3.jpeg" alt="Movie3" width="400">
+            <img src="" alt="Movie3" width="400">
           </div>  
         </div>
         <div id="row2"> 
           <div class="article grid_4">
-            <img src="./resources/images/E/M4.jpeg" alt="Movie4" width="400">
+            <img src="" alt="Movie4" width="400">
           </div>
           <div class="article grid_4">
-            <img src="./resources/images/E/M5.jpeg" alt="Movie5" width="400">
+            <img src="" alt="Movie5" width="400">
          </div>
          <div class="article grid_4">
-            <img src="./resources/images/E/M6.jpeg" alt="Movie6" width="400">
+            <img src="" alt="Movie6" width="400">
          </div>  
        </div>  
        <div id="row3">
         <div class="article grid_4">
-          <img id="i1" src="./resources/images/E/M10.jpeg" alt="Movie10" width="400">
+          <img src="" alt="Movie10" width="400">
         </div>
         <div class="article grid_4">
-          <img id="i2" src="./resources/images/E/M8.jpeg" alt="Movie8" width="400">
+          <img src="" alt="Movie8" width="400">
         </div>
         <div class="article grid_4">
-          <img id="i3" src="./resources/images/E/M9.jpeg" alt="Movie9" width="400">
+          <img src="" alt="Movie9" width="400">
         </div>  
       </div>
       <div id="row4"> 
         <div class="article grid_4">
-          <img src="./resources/images/E/M7.jpeg" alt="Movie7" width="400">
+          <img src="" alt="Movie7" width="400">
         </div>
         <div class="article grid_4">
-          <img src="./resources/images/E/TV1.jpeg" alt="TV1" width="400">
+          <img src="" alt="TV1" width="400">
        </div>
        <div class="article grid_4">
           <img src="" alt="" width="400">
@@ -165,10 +185,9 @@
       <br />
       <br />  
       <div id="footer" class="grid_12">
-        <p>
-          <img src="./resources/images/logo2.png" alt="Logo" width="100">  
-        &copy; EveSunflower Floral 2022 
-        </p>
+        <img src="./resources/images/logo2.png" alt="Logo" width="100">
+        <p> &copy; EveSunflower Floral 2022 </p>
+        <a href="#topbox">Top</a>
       </div>
     </div> <!--Container_12-->
    </body>
