--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <img src="./resources/images/W/We16.JPG" alt="Fireplace" width="400"  >
         </div>
         <div class="article grid_4">
-          <img src="./resources/images/E/Show2.jpeg" alt="Show" width="400"> 
+          <img src="./resources/images/E/E5.jpg" alt="Show" width="400"> 
         </div> 
       </div> 
       <div id="row2">
@@ -84,7 +84,7 @@
         <br />
         <br />
          Thank you so much for visiting me here on my page, and I hope you take a look around at some of my work by following the links above.
-         If you have any comments or questions about my work and what I do, please feel free to <a href=""><button>contact me</button></a>
+         If you have any comments or questions about my work and what I do, please feel free to <a href="mailto:"><button>contact me</button></a>
         </p>
       </div>
     </div>
@@ -92,10 +92,9 @@
    <br>
    <br>  
    <div id="footer" class="grid_12">
-    <p>
-      <img src="./resources/images/logo2.png" alt="Logo" width="100">  
-    &copy; EveSunflower Floral 2022 
-    </p>
+    <img src="./resources/images/logo2.png" alt="Logo" width="100">
+    <p> &copy; EveSunflower Floral 2022 </p>
+    <a href="#topbox">Top</a>
   </div>
    </div> <!--Container_12-->
    </body>
