--- a/wedding.html
+++ b/wedding.html
@@ -3,8 +3,8 @@
    <head>
      <title>EveSunflower Floral</title>
      <link href="./resources/css/index.css" type='text/css' rel="stylesheet">
-     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-     <link rel="icon" href="/favicon.ico" type="image/x-icon">
+     <link rel="shortcut icon" href="./resources/images/favicon.ico" type="image/x-icon">
+     <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
    </head>
     <body>
       <div class="container_12 clearfix">
@@ -27,7 +27,7 @@
         <br />
         <div id="headingbox">
           <div id="desc">
-            <h1 id="arch">Wedding Design - Arches</h1>
+            <h1 id="arch">Arches</h1>
             <h3>Below is a collection of the different styles of Arches I have created for weddings</h3>
           </div>
         </div>
@@ -67,10 +67,13 @@
             <img src="./resources/images/W/Ar6.jpeg" alt="Arch6" width="400">
           </div>  
         </div> 
+        <div id="feature" class="grid_12">
+          <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
+        </div>
         <br />
         <div id="headingbox">
           <div id="desc">
-            <h1 id="tablework">Wedding Design - Table Work</h1>
+            <h1 id="tablework">Table Work</h1>
             <h3>Below is a collection of the different types of Table Work I have created for weddings</h3>
           </div>
         </div>
@@ -110,10 +113,13 @@
           <img id="i3" src="./resources/images/W/We4.jpeg" alt="Wed4" width="400">
         </div>  
       </div>
+      <div id="feature" class="grid_12">
+        <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
+      </div>
       <br />
         <div id="headingbox">
           <div id="desc">
-            <h1 id="handwork">Wedding Design - Hand Work</h1>
+            <h1 id="handwork">Hand Work</h1>
             <h3>Below is a collection of the different types of Hand Work I have created for weddings</h3>
           </div>
         </div>
@@ -168,10 +174,9 @@
       <br />
       <br />  
       <div id="footer" class="grid_12">
-        <p>
-          <img src="./resources/images/logo2.png" alt="Logo" width="100">  
-        &copy; EveSunflower Floral 2022 
-        </p>
+        <img src="./resources/images/logo2.png" alt="Logo" width="100">
+        <p> &copy; EveSunflower Floral 2022 </p>
+        <a href="#topbox">Top</a>
       </div>
     </div> <!--Container_12-->
    </body>
