--- a/cakes.html
+++ b/cakes.html
@@ -3,8 +3,8 @@
    <head>
      <title>EveSunflower Floral</title>
      <link href="./resources/css/index.css" type='text/css' rel="stylesheet">
-     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-     <link rel="icon" href="/favicon.ico" type="image/x-icon">    
+     <link rel="shortcut icon" href="./resources/images/favicon.ico" type="image/x-icon">
+     <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">    
    </head>
     <body>
       <div class="container_12 clearfix">
@@ -18,10 +18,13 @@
             </ul>
           </div>
         </div>
+        <div id="feature" class="grid_12">
+          <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
+        </div>
         <br />
         <div id="headingbox">
           <div id="desc">
-            <h1>Wedding Design - Cake Decorations</h1>
+            <h1>Cake Decorations</h1>
             <h3>Below is a collection of the different Cake decorations I have created for weddings</h3>
           </div>
         </div>
@@ -55,7 +58,7 @@
             <img src="./resources/images/C/C2.jpeg" alt="Cake2" width="400">
           </div>
           <div class="article grid_4">
-            <img src="./resources/images/C/C8.jpeg" alt="Cake8" width="400">
+            <img src="./resources/images/C/C8.jpg" alt="Cake8" width="400">
           </div>
           <div class="article grid_4">
             <img src="./resources/images/C/C9.jpeg" alt="Cake9" width="400">
@@ -82,15 +85,25 @@
           <div class="article grid_4">
             <img src="./resources/images/C/C15.jpeg" alt="Cake15" width="400">
           </div>  
-        </div> 
+        </div>
+        <div id="row6">
+          <div class="article grid_4">
+            <img src="./resources/images/C/C16.jpg" alt="Cake16" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/C/C17.jpg" alt="Cake17" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="" alt="" width="400">
+          </div>  
+        </div>  
       <br />
       <br />
       <br />  
       <div id="footer" class="grid_12">
-        <p>
-          <img src="./resources/images/logo2.png" alt="Logo" width="100">  
-        &copy; EveSunflower Floral 2022 
-        </p>
+        <img src="./resources/images/logo2.png" alt="Logo" width="100">
+        <p> &copy; EveSunflower Floral 2022 </p>
+        <a href="#topbox">Top</a>
       </div>
     </div> <!--Container_12-->
    </body>
