--- a/cakes.html
+++ b/cakes.html
@@ -22,7 +22,7 @@
           <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
         </div>
         <br />
-        <div id="headingbox">
+        <div id="headingbox"role="presentation" >
           <div id="desc">
             <h1>Cake Decorations</h1>
             <h3>Below is a collection of the different Cake decorations I have created for weddings</h3>
