--- a/events.html
+++ b/events.html
@@ -25,7 +25,7 @@
           <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
         </div>
         <br />
-        <div id="headingbox">
+        <div id="headingbox" role="presentation">
           <div id="desc">
             <h1 id="corp">Corporate Events</h1>
             <h3>Below is a collection of different pieces I have created for various corporate events</h3>
@@ -93,7 +93,7 @@
           <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
         </div> 
         <br />
-        <div id="headingbox">
+        <div id="headingbox" role="presentation">
           <div id="desc">
             <h1 id="brand">Branding and Shows</h1>
             <h3>Below is a collection of some of my branding work and show peices I have created </h3>
@@ -128,7 +128,7 @@
         <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
       </div> 
       <br />
-        <div id="headingbox">
+        <div id="headingbox" role="presentation">
           <div id="desc">
             <h1 id="movie">TV and Movie</h1>
             <h3>Below WILL be a collection of the different peices I have created for different TV and Movie productions after they release.</h3>
