--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="feature" class="grid_12">
           <img id="frontpic" src="./resources/images/B/B18.jpeg" alt="Bridle Bouquette" class="align-center medium" width="800" >
           <br />
-        <div id="headingbox">   
+        <div id="headingbox" role="presentation">   
           <div id="desc">
             <h1>Floral Design Portfolio</h1>
             <h3>Highlights of the Floral work I have done over the 30 plus years in the business</h3>
@@ -71,7 +71,7 @@
     <br />
     <br />
     <br />
-    <div class="about grid_8">
+    <div class="about grid_8" role="presentation">
       <div id="me">
         <img src="./resources/images/EVE.jpeg" alt="Me" width="500">
       </div>
