--- a/wedding.html
+++ b/wedding.html
@@ -25,7 +25,7 @@
           <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
         </div>
         <br />
-        <div id="headingbox">
+        <div id="headingbox" role="presentation" >
           <div id="desc">
             <h1 id="arch">Arches</h1>
             <h3>Below is a collection of the different styles of Arches I have created for weddings</h3>
@@ -71,7 +71,7 @@
           <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
         </div>
         <br />
-        <div id="headingbox">
+        <div id="headingbox" role="presentation">
           <div id="desc">
             <h1 id="tablework">Table Work</h1>
             <h3>Below is a collection of the different types of Table Work I have created for weddings</h3>
@@ -117,7 +117,7 @@
         <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
       </div>
       <br />
-        <div id="headingbox">
+        <div id="headingbox" role="presentation">
           <div id="desc">
             <h1 id="handwork">Hand Work</h1>
             <h3>Below is a collection of the different types of Hand Work I have created for weddings</h3>
