fixed menu items for phones and back to top button

--- a/events.html
+++ b/events.html
@@ -21,6 +21,10 @@
             </ul>
           </div>
         </div>
+        <div id="totop">
+          <a href="#topbox"><img id="totop" src="./resources/images/Logotop.png" alt="To top" width="100"></a>
+        </div>
+        <br />
         <div id="feature" class="grid_12">
           <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
         </div>
