--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
           </ul>
         </div>
       </div>
+      <div id="totop">
+        <a href="#topbox"><img id="totop" src="./resources/images/Logotop.png" alt="To top" width="100"></a>
+      </div>
       <br />
       <div id="feature" class="grid_12">
           <img id="frontpic" src="./resources/images/B/B18.jpeg" alt="Bridle Bouquette" class="align-center medium" width="800" >
@@ -94,7 +97,7 @@
    <div id="footer" class="grid_12">
     <img src="./resources/images/logo2.png" alt="Logo" width="100">
     <p> &copy; EveSunflower Floral 2022 </p>
-    <a href="#topbox">Top</a>
+    
   </div>
    </div> <!--Container_12-->
    </body>
