added social media links

--- a/events.html
+++ b/events.html
@@ -189,8 +189,10 @@
       <br />
       <br />  
       <div id="footer" class="grid_12">
-        <img src="./resources/images/logo2.png" alt="Logo" width="100">
-        <p> &copy; EveSunflower Floral 2022 </p>
+        <img class="foot" src="./resources/images/logo2.png" alt="Logo" width="75">
+        <p class="foot"> &copy; EveSunflower Floral 2022 </p>  
+        <a href="http://www.facebook.com/eve.baillie.10/" class=" foot facebook"><img src="./resources/images/fb.png" width="50"></a> 
+        <a href="http://www.instagram.com/evesunflower7499" class=" foot instagram"><img src="./resources/images/Insta.png" width="50"></a>
       </div>
     </div> <!--Container_12-->
    </body>
