changed about imabe to round cornered

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <br />
     <div class="about grid_8" role="presentation">
       <div id="me">
-        <img src="./resources/images/EVE.jpeg" alt="Me" width="500">
+        <img id="aboutimg" src="./resources/images/EVE.jpeg" alt="Me" width="500">
       </div>
       <div id="story">
         <p>
