made some changes to the portfolio html file and added my wifes web address in there

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,8 +73,9 @@
         </div>
         <div class="evesunflower">
           <h2>Website I created after finishing Codecademy's Build a website with HTML, CSS and Github Pages Skill Path </h2>
-          <p>After finishing the skill path in <a id="cc" href="http://www.codecademy.com">Codecademy</a> for Build a website using HTML, CSS and Github Pages, I made a website for my Wife (a Florist). I wrote it using Visual Studio Code and Github.</p>
-          <p>I made a multi page website that is essentially my Wifes Portfolio, not unlike this particular website which I also wrote. </p>
+          <p>After finishing the skill path in <a id="cc" href="http://www.codecademy.com">Codecademy</a> for 'Build a website using HTML, CSS and Github Pages', I made this website for my Wife (who is a Florist), and wrote it using Visual Studio Code and Github.</p>
+          <p>I made a website that is essentially my Wifes Portfolio, you can see it here... <a href="http://evesunflower.com"> evesunflower.com </a>.</p>
+
           <img class="es1" src="./resources/images/ESF1.png" alt="Evesunflower Floral Code">
           <img class="es2" src="./resources/images/ESF4.png" alt="Evesunflower Floral Landing">
           <img class="es3" src="./resources/images/ESF3.png" alt="Evesunflower Floral Content 1">
