fixed buttons for use on phones

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
      <title>Terry Baillie</title>
-     <link href="./resources/css/index1.css" type='text/css' rel="stylesheet">
+     <link href="./resources/css/index.css" type='text/css' rel="stylesheet">
     </head>
     <body>
       <div class="gridbody">
