changed more buttons, this time in portfolio

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div> <!--heading-->
 
         <div class="navigation">
-          <ul class="nav">
+          <ul class="nav home">
           <button><a href="">About Me</a></button>
           <br />
           <button><a href="">Employment/ Experience</a></button>
