--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
       </div> <!--heading-->
 
       <div class="navigation">
-        <ul class="nav">
+        <ul class="nav portfolio">
         <button><a href="./index.html">Back</a></button> 
         <br /> 
         <button><a href="">Swift and Xcode</a></button>
