fixed all buttons on both portfolio and home page to suit phone

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,24 +2,69 @@
   <html>
    <head>
     <title>Programming Portfolio</title>
-     <link href="./resources/css/index.css" type='text/css' rel="stylesheet">
+     <link href="./resources/css/portfolio.css" type='text/css' rel="stylesheet">
    </head>
    <body>
      <a id="top"></a>
     <div class="gridbody">
       <div class="heading">
         <img id="headingimg" src="./resources/images/me.jpeg">
-        <h1 id="headingname">Terry Baillie </h1>
+        <h1 id="headingname">Portfolio </h1>
+        <div class="navigation">
+          <ul class="nav portfolio">
+          <button><a href="./index.html">Back</a></button> 
+          <button><a href="#swifty">Swift and Xcode</a></button>
+          <button><a href="#snaky">Python3</a></button>
+          <button><a href="#weby">HTML and CSS</a></button>
+          </ul> <!--nav-->
+        </div> <!--navigation-->
       </div> <!--heading-->
+      <br />
+      <br />
+      <a id="swifty"></a> <!--anchor to go back to top of Swift section-->
+      <div class="mainbody">
+        
+        <div class="swiftbody">
+          <div class="h2">
+            <h2>My Code using Swift & Xcode</h2>
+          </div> <!--h2 headings-->
+          <div class="p port">
+            <p>Back in 2018 I began looking into programming in the Swift language, I did a few tutorials on line and finally found a guy that had a great library of both books and tutorials on the subject <a href="http://www.hackingwithswift.com"><em>Hacking With Swift</em></a>.
+                I originally began by following one of his books, <em>Hacking with iOS</em>, and had a blast learning from it. However because of not wanting to publish any work to the apple app store and not being able to share the things I did
+                with family or friends, I soon gave up... For a while. 
+            </p>
+            <p>Then in 2019 I picked it back up again and began buying, reading, watching and learning how to program in Swift and Xcode once again, this time focusing on the macOS. I followed countless tutorials on line and in the books that I got from <a href="http://www.hackingwithswift.com"><em>Hacking With Swift</em></a>,
+              and after a while I began to get enough confidence to write my own games and code. Still not publising on the apple store, but able to run them from my own computer and show them off from there, I wrote quite a few little games and utility apps.</p>
+            <p>The following are a small part of my work that I have done using the language.</p>
+          </div> <!--paragraphs for portfolio-->
+          <div class="S1">
+            <div class="ph3">
+              <h3>Solo Mission</h3>
+            </div> <!--ph3-->
+            <div class="p port">
+              <p>I built this game by modeling it off one of the tutorials I did, I changed its appearance, and screen architecture as well as the physics and movements of the enemy fighters. But all in all it was a great first real game and I loved playing it, and occasionally still do.</p>
+            </div> <!--paragraphs for portfolio-->
+            <img src="./resources/images/SM0.png" alt="Solo Mission code">
+            <img src="./resources/images/SM1.png" alt="Solo Mission start screen">
+            <img src="./resources/images/SM2.png" alt="Solo Mission play">
+            <img src="./resources/images/SM3.png" alt="Solo Mission end screen">
+          </div> <!--S1-->
+          <br />
+          <div class="S2">
+             <div class="p port">
+              <p></p>
+            </div> <!--paragraphs for portfolio-->
+          </div> <!--S2-->
 
-      <div class="navigation">
-        <ul class="nav portfolio">
-        <button><a href="./index.html">Back</a></button> 
-        <button><a href="">Swift and Xcode</a></button>
-        <button><a href="">Python3</a></button>
-        <button><a href="">HTML and CSS</a></button>
-        </ul> <!--nav-->
-      </div> <!--navigation-->
+        </div> <!--swiftbody-->
+        <div class="pythonbody">
+          <a id="snaky"></a> <!--anchor to go back to top of Python section-->
+        </div> <!--pythonbody-->
+        <div class="webbody">
+          <a id="weby"></a> <!--anchor to go back to top of HTML section-->
+        </div> <!--webbody-->
+      </div> <!--mainbody-->
+
       <div class="footer">
         <img class="foot" src="./resources/images/logo.png" alt="Logo" width="75">
         <a class="foot name">&copy; Terry Baillie 2022</a>  
