Added the rest of the Swift programs to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,6 @@
       <br />
       <a id="swifty"></a> <!--anchor to go back to top of Swift section-->
       <div class="mainbody">
-        
         <div class="swiftbody">
           <div class="h2">
             <h2>My Code using Swift & Xcode</h2>
@@ -51,11 +50,31 @@
           </div> <!--S1-->
           <br />
           <div class="S2">
+            <div class="ph3">
+              <h3>Key Hunter</h3>
+            </div> <!--ph3-->
              <div class="p port">
-              <p></p>
+              <p>This was my first game that I built that was my own idea, I utilized all that I have read and used in the books and tutorials up to this point. Again I was trying to learn and focus on game physics and character interactions</p>
             </div> <!--paragraphs for portfolio-->
+            <img src="./resources/images/Key1.png" alt="Key Hunter code 1">
+            <img src="./resources/images/Key2.png" alt="Key Hunter Code 2">
+            <img src="./resources/images/Key3.png" alt="Key Hunter play">
           </div> <!--S2-->
-
+          <br />
+          <div class="S3">
+            <div class="ph3">
+              <h3>Porsche 928 Workshop Manual</h3>
+            </div> <!--ph3-->
+             <div class="p port">
+              <p>This was my first attempt at making an app that I thought would be useful, in otherwords, not a game. I have a Classic 1986 Model Porsche 928 that I am restoring and I have a PDF of the entire workshop manuals that takes forever to try and find the sections and page numbers I'm looking for, so
+                I designed this app to help with that. I made it so that the manual was split up into its components and added links to enable quick access to whatever I am looking for.
+              </p>
+            </div> <!--paragraphs for portfolio-->
+            <img src="./resources/images/WSM0.png" alt="Workshop Manual Code">
+            <img src="./resources/images/WSM1.png" alt="Workshop Manual Landing Page">
+            <img src="./resources/images/WSM2.png" alt="Workshop Manual Menu Page">
+            <img src="./resources/images/WSM3.png" alt="Workshop Manual Content View">
+          </div> <!--S3-->
         </div> <!--swiftbody-->
         <div class="pythonbody">
           <a id="snaky"></a> <!--anchor to go back to top of Python section-->
