added links to other pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
      <link href="./resources/css/index.css" type='text/css' rel="stylesheet">
     </head>
     <body>
+      <!--<script> window.confirm('Hey there'); </script>-->
       <div class="gridbody">
 
         <div class="heading">
@@ -16,9 +17,9 @@
           <ul class="nav home">
           <button><a href="">About Me</a></button>
           <br />
-          <button><a href="">Employment/ Experience</a></button>
+          <button><a href="./employment.html">Employment/ Experience</a></button>
           <br />
-          <button><a href="">Certifications</a></button>
+          <button><a href="./certificates.html">Certifications</a></button>
           <br />
           <button><a href="./portfolio.html">Programming Portfolio</a></button>
           <br />
