added to the certifications page

--- a/certificates.html
+++ b/certificates.html
@@ -16,7 +16,31 @@
           </ul> <!--nav--> 
           </div> <!--navigation-->
         </div> <!--heading-->
-      
-   </div> <!--GRIDBODY-->
-   </body>
+      <div class="mainbody">
+        <div class="certbody">
+          <div class="C1">
+            <div class="ph3">
+              <h3>Codecademy Certificates</h3>
+            </div> <!--ph3-->
+            <div class="p port">
+              <p>Below are all the certifications I have currently recieved since enrolling in the pro courses at Codecademy.</p>
+              <p>Currently I am working on the Front End Engineer Career Path and Learn JavaScript courses.</p>
+            </div> <!--paragraphs for portfolio-->
+            <img src="./resources/images/LCLine.png" alt="Command Line">
+            <img src="./resources/images/LCSS.png" alt="CSS Beginer">
+            <img src="./resources/images/LCSSInter.png" alt="CSS Intermediate">
+            <img src="./resources/images/LHTML.png" alt="HTML">
+            <img src="./resources/images/LP3.png" alt="Python3">
+            <img src="./resources/images/Web.jpg" alt="Build a webpage">
+          </div> <!--C1-->
+        </div> <!--CERTBODY--> 
+      </div> <!--mainbody-->
+      <div class="footer">
+        <img class="foot" src="./resources/images/logo.png" alt="Logo" width="75">
+        <a class="foot name">&copy; Terry Baillie 2022</a>  
+        <a href="http://www.facebook.com/maddarr/" class=" foot facebook"><img id="fb" src="./resources/images/fb.png" width="50"></a> 
+        <a href="http://www.instagram.com/a_fat_aussie_abroad" class=" foot instagram"><img id="fb" src="./resources/images/Insta.png" width="50"></a>
+      </div> <!--footer--> 
+    </div> <!--GRIDBODY-->
+  </body>
  </html>
