Changed headers and headings for certifications and Portfolio

--- a/certificates.html
+++ b/certificates.html
@@ -19,10 +19,10 @@
       <div class="mainbody">
         <div class="certbody">
           <div class="C1">
-            <div class="ph3">
-              <h3>Codecademy Certificates</h3>
-            </div> <!--ph3-->
-            <div class="p port">
+            <div class="ph2">
+              <h2>Codecademy Certificates</h2>
+            </div> <!--ph2-->
+            <div class="c port">
               <p>Below are all the certifications I have currently recieved since enrolling in the pro courses at Codecademy.</p>
               <p>Currently I am working on the Front End Engineer Career Path and Learn JavaScript courses.</p>
             </div> <!--paragraphs for portfolio-->
