Added the rest of my Certificates

--- a/certificates.html
+++ b/certificates.html
@@ -33,6 +33,27 @@
             <img src="./resources/images/LP3.png" alt="Python3">
             <img src="./resources/images/Web.jpg" alt="Build a webpage">
           </div> <!--C1-->
+          <br />
+          <div class="C2">
+            <div class="ph2">
+              <h2>Weld Inspection Certificates</h2>
+            </div> <!--ph2-->
+             <div class="c port">
+              <p>These are my Certifications that I held as a Quality Control Supervisor and Weld Inspector. Because I no longer work for the company they have not be renewed, However my quantity of hours in method stand at over 13K in Visual Inspection and over 9K in Penetrant Inspection both at Level 2.</p>
+            </div> <!--paragraphs for portfolio-->
+            <img src="./resources/images/PTLVL2.jpeg" alt="PT Level 2">
+            <img src="./resources/images/VTLVL2.jpeg" alt="VT Level 2">
+          </div> <!--C2-->
+          <br />
+          <div class="C3">
+            <div class="ph2">
+              <h2>Boilermaker and SSF Certificate</h2>
+            </div> <!--ph2-->
+             <div class="c port">
+              <p>This is the certification that I completed my 4 year college Apprenticeship for Boilermaker and Structural Steel Fabrication.
+            </div> <!--paragraphs for portfolio-->
+            <img src="./resources/images/Boilermaker.jpeg" alt="Boilermaker and SSF">
+          </div> <!--C3-->
         </div> <!--CERTBODY--> 
       </div> <!--mainbody-->
       <div class="footer">
