Finished portfolio page and started employment page

--- a/employment.html
+++ b/employment.html
@@ -16,7 +16,25 @@
             </ul>  <!--nav-->
           </div> <!--navigation-->
         </div> <!--heading-->
-      
+        <div class="mainbody">
+          <div class="emplymentbody">
+            <div class="E1">
+              <div class="ph4">
+                <h2>United States Postal Service</h2>
+              </div> <!--ph4-->
+              <div class="position">
+                <h3>Rural Carrier Assistant</h3>
+              </div>
+                <ul class="responsibilitues">
+                  <li>Demonstrated and promoted safe driving methods, consistently adhering to state traffic rules and regulations.</li>
+                  <li>Sorted postal flats, letters, packages, and magazines based on addresses and names. </li>
+                  <li>Loaded truck by properly securing items to prevent damage during transportation.</li>
+
+                </ul>
+            </div> <!--E1-->
+            <br />
+            </div> <!--pythonbody--> 
+        </div>
    </div> <!--GRIDBODY-->
    </body>
  </html>
