--- a/portfolio.html
+++ b/portfolio.html
@@ -72,15 +72,51 @@
             </div> <!--paragraphs for portfolio-->
             <img src="./resources/images/WSM0.png" alt="Workshop Manual Code">
             <img src="./resources/images/WSM1.png" alt="Workshop Manual Landing Page">
-            <img src="./resources/images/WSM2.png" alt="Workshop Manual Menu Page">
             <img src="./resources/images/WSM3.png" alt="Workshop Manual Content View">
           </div> <!--S3-->
         </div> <!--swiftbody-->
-        <div class="pythonbody">
-          <a id="snaky"></a> <!--anchor to go back to top of Python section-->
-        </div> <!--pythonbody-->
+        <br />
+       <div class="pythonbody">
+          <a id="snaky"></a> <!--anchor to go back to top of Python section-->  
+          <div class="h2">
+            <h2>My Code using Python3</h2>
+          </div> <!--h2 headings-->
+          <div class="S4">
+            <div class="ph3">
+              <h3>Stupid Ways</h3>
+            </div> <!--ph3-->
+            <div class="p port">
+              <p>After playing around with Swift and Xcode, this last year I decided to take it further with the coding and I enrolled in an online training program called <a href="http://www.codecademy.com"><em>Codecademy</em></a>. I began by learning the Python language and how to use the Command Line to help utilize the language. </p>
+              <p>The following is part of the final assignment for the certification, in which I had to create a small game that would run in the terminal. I called it Stupid Ways, and it was designed with a card game called Stipid Deaths in mind, where you are given a senario of a persons death and you have to decide whether or not it was a true account or false</p>
+            </div> <!--paragraphs for portfolio-->
+            <img src="./resources/images/SW1.png" alt="Stupid Ways 1">
+            <img src="./resources/images/SW2.png" alt="Stupid Ways 2">
+            <img src="./resources/images/SW3.png" alt="Stupid Ways 3">
+            <img src="./resources/images/SW4.png" alt="Stupid Ways 4">
+          </div> <!--S4-->
+          <br />
+          </div> <!--pythonbody-->
         <div class="webbody">
           <a id="weby"></a> <!--anchor to go back to top of HTML section-->
+          <div class="h2">
+            <h2>My HTML and CSS work</h2>
+          </div> <!--h2 headings-->
+          <div class="S5">
+            <div class="ph3">
+              <h3>Evesunflower.com</h3>
+            </div> <!--ph3-->
+            <div class="p port">
+              <p>Once I had finished the Python3 certification, I began to look into what other courses were available. I found one that would send me down the path Im on now. Front End Engineer. Within this career path I have now achieved certifications in HTML, Basic and Intermediate
+                CSS and have begun Java Script. </p>
+              <p>The following is images of the final assignment for the certification 'Build a Website using HTML, CSS and GitHub Pages', It is a portfolio I wrote and published for my wife and her chosen profession <a href="https://www.evesunflower.com"><em>evesunflower.com</em></a> </p>
+              <p>This website is also written and published my myself too.</p>
+            </div> <!--paragraphs for portfolio-->
+            <img src="./resources/images/ESF1.png" alt="evesunflower.com 1">
+            <img src="./resources/images/ESF2.png" alt="evesunflower.com 2">
+            <img src="./resources/images/ESF3.png" alt="evesunflower.com 3">
+            <img src="./resources/images/ESF4.png" alt="evesunflower.com 4">
+          </div> <!--S5-->
+          <br />
         </div> <!--webbody-->
       </div> <!--mainbody-->
 
